--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -45,7 +45,7 @@
                     <div class="row">
                         <div class="col-md-9">
                             <h1 class="title text-white pt-3">
-                                The next generation of open source wildfire risk models to support decision making for a more safe and resilient electric grid.
+                                The next generation of open source wildfire risk models to support decision making for a more safe and resilient electric grid….
                             </h1>
                         </div>
                         <div class="col-md-7">
