--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -51,7 +51,7 @@
                         <div class="col-md-7">
                             <p class="subtitle text-white pt-3">
                                 Pyregence consortium is founded on open science and technology principles,
-                                empoying inclusivity and collaboration to tackle complex challenges.
+                                empoying inclusivity and collaboration to tackle complex challenges…..1234
                             </p>
                             <div>
                                 <a href="#" class="btn border-yellow text-white">Learn More</a>
