--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -8,7 +8,8 @@
               href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
               integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <link rel="stylesheet" href="css/style.css">
-        <title>Pyregence</title>
+        <title>Pyregence - Wildfire Risk Models for a Safe & Resilient Grid</title>
+		<meta name="description" content="The next generation of open source wildfire risk models to support decision making for a more safe and resilient electric grid.">
     </head>
     <body class="home">
         <div class="site">
@@ -16,12 +17,21 @@
                 <a class="skip-link sr-only sr-only-focusable" href="#content">Skip to content</a>
                 <div class="container">
                     <div class="row py-3">
-                        <div class="col-md-3 d-flex align-items-center">
-                            <a class="navbar-brand" rel="home" href="/" title="Pyregence"><img src="images/pyregence.svg" alt="Pyregence logo" /></a>
+                        <div class="col-md-3 col-6 d-flex align-items-center">
+                            <a class="navbar-brand" rel="home" href="/" title="Pyregence"><img src="images/pyregence.svg" alt="Pyregence logo" class="real-logo" /><img src="images/pyregence-yellow.svg" class="yellow-logo" alt="Pyregence logo yellow" /></a>
                         </div>
-                        <div class="col-md-9">
+                        <div class="col-md-9 col-6 mobile-flex">
+							<div class="mobile-button">
+								<a href="javascript:void(0)" class="icon"> 
+									<div class="hamburger"> 
+										<div class="menui top-menu"></div> 
+										<div class="menui mid-menu"></div> 
+										<div class="menui bottom-menu"></div> 
+									</div> 
+								</a>
+							</div>
                             <div class="mobilenav">
-                                <ul id="main-menu" class="navbar ml-auto list-unstyled justify-content-end mb-0 align-items-center">
+                                <ul id="main-menu" class="navbar ml-auto list-unstyled mb-0">
                                     <li itemscope="itemscope" itemtype="https://www.schema.org/SiteNavigationElement" id="menu-item-home" class="nav-item">
                                         <a href="/" class="nav-link">home</a>
                                     </li>
@@ -62,57 +72,93 @@
                 <div class="slider-button p-absolute">
                 </div>
             </div>
-            <div class="jumbotron bg-yellow mb-0 panel2">
+            <div class="jumbotron bg-white pt-4 pb-0 mt-3 panel2">
                 <div class="container">
                     <div class="row study-build">
-                        <div class="col-md-6 border-right-4">
-                            <h2 class="text-center text-white mb-4">Study it</h2>
+                        <div class="col-md-6 mb-4">
+                            <h2 class="text-center text-yellow mb-4">Study it</h2>
                             <div class="row">
-                                <div class="col-md-6 d-flex flex-column align-items-center px-4">
-                                    <div class="white circle d-flex align-items-center justify-content-center my-4">
-                                        <img src="images/extreme-weather.svg" alt="Extreme Weather icon" />
-                                    </div>
-                                    <h3 class="text-center">Extreme Weather</h3>
-                                    <p class="text-center">Determining weather conditions and other associated factors with large wildfires in the past.</p>
-                                </div>
-                                <div class="col-md-6 d-flex flex-column align-items-center px-4">
-                                    <div class="white circle d-flex align-items-center justify-content-center my-4">
-                                        <img src="images/advanced-wildfire-science.svg" alt="Advanced Wildfire Science icon" />
-                                    </div>
-                                    <h3 class="text-center">Advanced Wildfire Science</h3>
-                                    <p class="text-center">
-                                        Fundamental scientific research on fuel mapping and fire spread dynamics to inform the next generation of wildfire models
-                                    </p>
+                                <div class="col-md-6 px-2 mb-4">
+									<div class="box-shadow">	
+										<div class="box extreme-weather">
+											<div class="white circle d-flex align-items-center justify-content-center4">
+												<img src="images/extreme-weather.svg" alt="Extreme Weather icon" />
+											</div>
+										</div>
+										<div class="box-content">
+											<h3 class="text-center">Extreme Weather</h3>
+											<div class="yellow-line small my-3"></div>
+											<p class="text-center">Determining weather conditions and other associated factors with large wildfires in the past.</p>
+											<div class="text-center readmore">
+												<a href="#">Read More <img src="images/arrow-right-solid.png"></a>
+											</div>
+										</div>
+									</div>
+								</div>
+                                <div class="col-md-6 px-2 mb-4">
+									<div class="box-shadow">
+										<div class="box wildfire-science">
+											<div class="white circle d-flex align-items-center justify-content-center">
+												<img src="images/advanced-wildfire-science.svg" alt="Advanced Wildfire Science icon" />
+											</div>
+										</div>
+										<div class="box-content">
+											<h3 class="text-center">Advanced Wildfire Science</h3>
+											<div class="yellow-line small my-3"></div>
+											<p class="text-center">
+												Fundamental scientific research on fuel mapping and fire spread dynamics to inform the next generation of wildfire models
+											</p>
+											<div class="text-center readmore">
+												<a href="#">Read More <img src="images/arrow-right-solid.png"></a>
+											</div>
+										</div>
+									</div>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-6">
-                            <h2 class="text-center text-white mb-4">Build it</h2>
+                        <div class="col-md-6 mb-4">
+                            <h2 class="text-center text-yellow mb-4">Build it</h2>
                             <div class="row">
-                                <div class="col-md-6 d-flex flex-column align-items-center px-4">
-                                    <div class="white circle d-flex align-items-center justify-content-center my-4">
-                                        <img src="images/wildfire-map-icon.svg" alt="Wildfire Forecasts icon" />
-                                    </div>
-                                    <h3 class="text-center">Wildfire Forecasts</h3>
-                                    <p class="text-center">Forecast for all wildfire activity in California to inform the management of a safe and reliable grid</p>
-                                    <div class="text-center">
-                                        <a href="#" class="btn red text-white">Learn More</a>
-                                    </div>
+                                <div class="col-md-6 px-2 mb-4">
+									<div class="box-shadow">
+										<div class="box forecasts">
+											<div class="white circle d-flex align-items-center justify-content-center">
+												<img src="images/wildfire-map-icon.svg" alt="Wildfire Forecasts icon" />
+											</div>
+										</div>
+										<div class="box-content">
+											<h3 class="text-center">Wildfire Forecasts</h3>
+											<div class="yellow-line small my-3"></div>
+											<p class="text-center">Forecast for all wildfire activity in California to inform the management of a safe and reliable grid</p>
+											<div class="text-center">
+												<a href="#" class="btn red text-white">Launch Tool</a>
+											</div>
+										</div>
+									</div>
                                 </div>
-                                <div class="col-md-6 d-flex flex-column align-items-center px-4">
-                                    <div class="white circle d-flex align-items-center justify-content-center my-4">
-                                        <img src="images/wildfire-chart-icon.svg" alt="Wildfire Scenarios icon" />
-                                    </div>
-                                    <h3 class="text-center">Wildfire Scenarios</h3>
-                                    <p class="text-center">Wildfire scenarios under a changing climate to inform adaptation planning for a more resilient grid</p>
-                                    <p class="text-center py-2 text-white text-uppercase">Coming Soon</p>
+                                <div class="col-md-6 px-2 mb-4">
+									<div class="box-shadow">
+										<div class="box scenarios">
+											<div class="white circle d-flex align-items-center justify-content-center">
+												<img src="images/wildfire-chart-icon.svg" alt="Wildfire Scenarios icon" />
+											</div>
+										</div>
+										<div class="box-content">
+											<h3 class="text-center">Wildfire Scenarios</h3>
+											<div class="yellow-line small my-3"></div>
+											<p class="text-center">Wildfire scenarios under a changing climate to inform adaptation planning for a more resilient grid</p>
+											<div class="text-center">
+												<a href="#" class="btn grey" onclick="return false;">Coming Soon</a>
+											</div>
+										</div>
+									</div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="container py-5 panel 3">
+            <div class="container pb-5 panel 3">
                 <div class="row justify-content-center">
                     <div class="col-md-8">
                         <h2 class="text-center text-yellow mb-3">Project Biography</h2>
@@ -267,59 +313,59 @@
                     </div>
                 </div>
                 <div class="row justify-content-center logos">
-                    <div class="col-md-2 col-6 d-flex justify-content-center align-items-center">
+                    <div class="col-lg-2 col-md-4 col-6 d-flex justify-content-center align-items-center">
                         <div class="circle white"><img src="images/berkeley.png" alt="berkeley logo" /></div>
                     </div>
-                    <div class="col-md-2 col-6 d-flex justify-content-center align-items-center">
+                    <div class="col-lg-2 col-md-4 col-6 d-flex justify-content-center align-items-center">
                         <div class="circle white"><img src="images/USGS-01.png" alt="USGS logo" /></div>
                     </div>
-                    <div class="col-md-2 col-6 d-flex justify-content-center align-items-center">
+                    <div class="col-lg-2 col-md-4 col-6 d-flex justify-content-center align-items-center">
                         <div class="circle white"><img src="images/sig.png" alt="SIG logo" /></div>
                     </div>
-                    <div class="col-md-2 col-6 d-flex justify-content-center align-items-center">
+                    <div class="col-lg-2 col-md-4 col-6 d-flex justify-content-center align-items-center">
                         <div class="circle white"><img src="images/reax-enginering.jpg" alt="reax engineeering logo" /></div>
                     </div>
-                    <div class="col-md-2 col-6 d-flex justify-content-center align-items-center">
+                    <div class="col-lg-2 col-md-4 col-6 d-flex justify-content-center align-items-center">
                         <div class="circle white"><img src="images/university-of-california-merced.png" alt="university-of-california-merced logo" /></div>
                     </div>
-                    <div class="col-md-2 col-6 d-flex justify-content-center align-items-center">
+                    <div class="col-lg-2 col-md-4 col-6 d-flex justify-content-center align-items-center">
                         <div class="circle white"><img src="images/usfs-logo.png" alt="usfs logo" /></div>
                     </div>
-                    <div class="col-md-2 col-6 d-flex justify-content-center align-items-center">
+                    <div class="col-lg-2 col-md-4 col-6 d-flex justify-content-center align-items-center">
 
                         <div class="circle white"><img src="images/prometheus.jpg" alt="prometheus logo" /></div>
                     </div>
-                    <div class="col-md-2 col-6 d-flex justify-content-center align-items-center">
+                    <div class="col-lg-2 col-md-4 col-6 d-flex justify-content-center align-items-center">
                         <div class="circle white"><img src="images/UNM.png" alt="UNM logo" /></div>
                     </div>
-                    <div class="col-md-2 col-6 d-flex justify-content-center align-items-center">
+                    <div class="col-lg-2 col-md-4 col-6 d-flex justify-content-center align-items-center">
                         <div class="circle white"><img src="images/university-of-san-francisco.png" alt="university-of-san-francisco logo" /></div>
                     </div>
-                    <div class="col-md-2 col-6 d-flex justify-content-center align-items-center">
+                    <div class="col-lg-2 col-md-4 col-6 d-flex justify-content-center align-items-center">
                         <div class="circle white"><img src="images/university-of-california-santa-barbara.png" alt="universit-of-california-santa-barbara logo" /></div>
                     </div>
-                    <div class="col-md-2 col-6 d-flex justify-content-center align-items-center">
+                    <div class="col-lg-2 col-md-4 col-6 d-flex justify-content-center align-items-center">
                         <div class="circle white"><img src="images/scripps-logo.png" alt="scripps logo" /></div>
                     </div>
-                    <div class="col-md-2 col-6 d-flex justify-content-center align-items-center">
+                    <div class="col-lg-2 col-md-4 col-6 d-flex justify-content-center align-items-center">
                         <div class="circle white"><img src="images/UCAR.jpg" alt="UCAR logo" /></div>
                     </div>
-                    <div class="col-md-2 col-6 d-flex justify-content-center align-items-center">
+                    <div class="col-lg-2 col-md-4 col-6 d-flex justify-content-center align-items-center">
                         <div class="circle white"><img src="images/pyrologix.png" alt="pyrologix logo" /></div>
                     </div>
-                    <div class="col-md-2 col-6 d-flex justify-content-center align-items-center">
+                    <div class="col-lg-2 col-md-4 col-6 d-flex justify-content-center align-items-center">
                         <div class="circle white"><img src="images/eagle.jpg" alt="eagle logo" /></div>
                     </div>
-                    <div class="col-md-2 col-6 d-flex justify-content-center align-items-center">
+                    <div class="col-lg-2 col-md-4 col-6 d-flex justify-content-center align-items-center">
                         <div class="circle white"><img src="images/deer-creek-gis.png" alt="deer-creek-gis" /></div>
                     </div>
-                    <div class="col-md-2 col-6 d-flex justify-content-center align-items-center">
+                    <div class="col-lg-2 col-md-4 col-6 d-flex justify-content-center align-items-center">
                         <div class="circle white"><img src="images/STI-logo.jpg" alt="STI logo" /></div>
                     </div>
-                    <div class="col-md-2 col-6 d-flex justify-content-center align-items-center">
+                    <div class="col-lg-2 col-md-4 col-6 d-flex justify-content-center align-items-center">
                         <div class="circle white"><img src="images/Salo-logo.jpg" alt="Salo Logo" /></div>
                     </div>
-                    <div class="col-md-2 col-6 d-flex justify-content-center align-items-center">
+                    <div class="col-lg-2 col-md-4 col-6 d-flex justify-content-center align-items-center">
                         <div class="circle white"><p class="mb-0">Lumen Energy<br>Strategy</p></div>
                     </div>
                 </div>
@@ -397,7 +443,7 @@
                 <p class="text-white text-center mb-0 smaller">&copy; 2020 Pyregence - All Rights Reserved | Terms</p>
             </footer>
         </div>
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
         <script src="js/script.js"></script>
