--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -320,7 +320,7 @@
                         <div class="circle white"><img src="images/USGS-01.png" alt="USGS logo" /></div>
                     </div>
                     <div class="col-lg-2 col-md-4 col-6 d-flex justify-content-center align-items-center">
-                        <div class="circle white"><img src="images/sig.png" alt="SIG logo" /></div>
+                        <div class="circle white"><img src="images/sig-logo-stacked.png" alt="SIG logo" /></div>
                     </div>
                     <div class="col-lg-2 col-md-4 col-6 d-flex justify-content-center align-items-center">
                         <div class="circle white"><img src="images/reax-enginering.jpg" alt="reax engineeering logo" /></div>
@@ -366,7 +366,7 @@
                         <div class="circle white"><img src="images/Salo-logo.jpg" alt="Salo Logo" /></div>
                     </div>
                     <div class="col-lg-2 col-md-4 col-6 d-flex justify-content-center align-items-center">
-                        <div class="circle white"><p class="mb-0">Lumen Energy<br>Strategy</p></div>
+                        <div class="circle white"><img src="images/lumen-logo.jpg" alt="lumen energy strategy Logo" /></div>
                     </div>
                 </div>
             </div>
