--- a/resources/html/home.html
+++ b/resources/html/home.html
@@ -20,14 +20,14 @@
                         <div class="col-md-3 col-6 d-flex align-items-center">
                             <a class="navbar-brand" rel="home" href="/" title="Pyregence"><img src="images/pyregence.svg" alt="Pyregence logo" class="real-logo" /><img src="images/pyregence-yellow.svg" class="yellow-logo" alt="Pyregence logo yellow" /></a>
                         </div>
-                        <div class="col-md-9 col-6 mobile-flex">
+                        <div class="col-md-9 col-6 mobile-flex">	
 							<div class="mobile-button">
-								<a href="javascript:void(0)" class="icon"> 
-									<div class="hamburger"> 
-										<div class="menui top-menu"></div> 
-										<div class="menui mid-menu"></div> 
-										<div class="menui bottom-menu"></div> 
-									</div> 
+								<a href="javascript:void(0)" class="icon">
+									<div class="hamburger">
+										<div class="menui top-menu"></div>
+										<div class="menui mid-menu"></div>
+										<div class="menui bottom-menu"></div>
+									</div>
 								</a>
 							</div>
                             <div class="mobilenav">
@@ -60,8 +60,7 @@
                         </div>
                         <div class="col-md-7">
                             <p class="subtitle text-white pt-3">
-                                Pyregence consortium is founded on open science and technology principles,
-                                empoying inclusivity and collaboration to tackle complex challenges.
+                                Pyregence consortium is founded on open science and technology principles, employing inclusivity and collaboration to tackle complex challenges.
                             </p>
                             <div>
                                 <a href="#" class="btn border-yellow text-white">Learn More</a>
@@ -88,7 +87,7 @@
 										<div class="box-content">
 											<h3 class="text-center">Extreme Weather</h3>
 											<div class="yellow-line small my-3"></div>
-											<p class="text-center">Determining weather conditions and other associated factors with large wildfires in the past.</p>
+											<p class="text-center">Determining weather conditions and other associated factors with large wildfires in the past</p>
 											<div class="text-center readmore">
 												<a href="#">Read More <img src="images/arrow-right-solid.png"></a>
 											</div>
@@ -173,23 +172,12 @@
                 <div class="row justify-content-center">
                     <div class="col-md-6 px-4">
                         <p class="text-justify">
-                            Current wildfire science and forecasting models lack capability to provide scientifically rigorous,
-                            timely and location specific insights for situational awareness of wildfire threats to and from the
-                            electric grid. The fire physics supporting the state-level models fail to address the substantial changes
-                            in fire behaviour driven by higher fuel loads, more frequent extreme weather events and development in
-                            the wildland urban interface throughout California. Furthermore, wildfire modelling is often in a black
-                            box and/or not scientifically reviewed resulting in a lack of transparency into the basis of many critical,
-                            often life-saving decisions.
+                            Current wildfire science and forecasting models lack capability to provide scientifically rigorous, timely and location specific insights for situational awareness of wildfire threats to and from the electric grid. The fire physics supporting the state-level models fail to address the substantial changes in fire behavior driven by higher fuel loads, more frequent extreme weather events and development in the wildland urban interface throughout California. Furthermore, wildfire modeling is often in a black box and/or not scientifically reviewed resulting in a lack of transparency into the basis of many critical, often life-saving decisions.
                         </p>
                     </div>
                     <div class="col-md-6 px-4">
                         <p class="text-justify">
-                            Pyregence is a consortium funded by the California Energy Commission to focus on the challenge of
-                            wildfire impacts to and from the electric grid. Pyregence aims to advance fire behaviour science, enhance
-                            cutting-edge risk models and operationalize the analysis for electric utilities and adaptation planning for
-                            California’s Fifth Climate Change Assessment. The consortium will release all software code as open source.
-                            Throughout the development of new software, a diversity of specialists will compare and contrast approaches
-                            to addressing technical challenges and converge on the optimal path to the next generation of wildfire models.
+                            Pyregence is a consortium funded by the California Energy Commission to focus on the challenge of wildfire impacts to and from the electric grid. Pyregence aims to advance fire behavior science, enhance cutting-edge risk models and operationalize the analysis for electric utilities and adaptation planning for California’s Fifth Climate Change Assessment. The consortium will release all software code as open source. Throughout the development of new software, a diversity of specialists will compare and contrast approaches to addressing technical challenges and converge on the optimal path to the next generation of wildfire models.
                         </p>
                     </div>
                 </div>
@@ -207,10 +195,7 @@
                                 <h3 class="text-white my-3">Extreme Weather</h3>
                                 <div class="white-line"></div>
                                 <p class="text-white my-3">
-                                    Electric utilities need better weather forecasts to improve situational awareness of wildfire threats
-                                    to and from the grid. Pyregence will support electric utilities by developing a methodology for optimal
-                                    location of weather stations and piloting an upper-air profiler over a fire season to scout for early
-                                    signs of impending extreme wind events.
+                                    Electric utilities need better weather forecasts to improve situational awareness of wildfire threats to and from the grid. Pyregence will support electric utilities by developing a methodology for optimal location of weather stations and piloting an upper-air profiler over a fire season to scout for early signs of impending extreme wind events.
                                 </p>
                             </div>
                             <div class="col-md-3 text-center">
@@ -231,10 +216,7 @@
                                 <h3 class="text-white">Advance Wildfire Science</h3>
                                 <div class="white-line my-3"></div>
                                 <p class="text-white">
-                                    Current fire models fail to address the fundamental physics behind contemporary wildfire events in
-                                    the State of California. This team aims to deliver fundamental scientific advances to give rise to
-                                    the next generation of wildfire models, including a new fuel mapping technique and fire spread model
-                                    based derived from fire physics.
+                                    Current fire models fail to address the fundamental physics behind contemporary wildfire events in the State of California. This team aims to deliver fundamental scientific advances to give rise to the next generation of wildfire models, including a new fuel mapping technique and fire spread model based derived from fire physics.
                                 </p>
                             </div>
                             <div class="col-md-3 text-center">
@@ -255,11 +237,7 @@
                                 <h3 class="text-white">Wildfire Forecasts</h3>
                                 <div class="white-line my-3"></div>
                                 <p class="text-white">
-                                    Current wildfire forecasting software fails to take into account fundamental fire physics and
-                                    often uses a singular approach in modelling the complexities of wildfires in California. Project
-                                    Pyregence will integrate multiple best practice wildfire models into a single open source software
-                                    interface to provide IOUs with the best possible 0-7 day fire forecasts that are vital to managing
-                                    a more reliable, safe, cost effective and resilient electric grid.
+                                    Current wildfire forecasting software fails to take into account fundamental fire physics and often uses a singular approach in modeling the complexities of wildfires in California. Project Pyregence will integrate multiple best practice wildfire models into a single open source software interface to provide IOUs with the best possible 0-7 day fire forecasts that are vital to managing a more reliable, safe, cost effective and resilient electric grid.
                             </div>
                             <div class="col-md-3 text-center">
                                 <a class="btn text-white" href="#">Learn More</a>
@@ -280,10 +258,7 @@
                                 <h3 class="text-white">Wildfire Scenarios</h3>
                                 <div class="white-line my-3"></div>
                                 <p class="text-white">
-                                    California is faced with a challenging ‘new normal’: an increased risk of megafires resulting in catastrophic
-                                    impacts to society over the coming century. The Pyregence consortium will develop wildfire scenarios under
-                                    a changing climate to inform mitigation and adaptation planning for a more safe, cost- effective, reliable
-                                    and resilient electric utility grid.
+                                    California is faced with a challenging ‘new normal’: an increased risk of megafires resulting in catastrophic impacts to society over the coming century. The Pyregence consortium will develop wildfire scenarios under a changing climate to inform mitigation and adaptation planning for a more safe, cost-effective, reliable and resilient electric utility grid.
                             </div>
                             <div class="col-md-3 text-center">
                                 <a class="btn text-white" href="#">Learn More</a>
@@ -299,8 +274,7 @@
                             Pyregence Consortium
                         </h2>
                         <p class="subtitle text-center">
-                            The consortium brings together wildfire scientists and technologists partners from leading research institutions
-                            from industry, academia, and government.
+                            The consortium brings together wildfire scientists and technologists, partners from leading research institutions from industry, academia, and government.
                         </p>
                     </div>
                 </div>
@@ -383,13 +357,7 @@
                     <div class="row justify-content-center">
                         <div class="col-md-8">
                             <p class="text-white text-justify">
-                                The Pyregence Consortium is committed to transparency and reproducibility throughout our systems because
-                                we recognize these as necessary ingredients for successful science-based decision making. No one trusts
-                                a black box, and that is why all of our software from our weather pipeline and high performance fire models
-                                to our dynamic web interface is being developed and released under the strongest open source license currently
-                                available: the GPLv3 (link: https://www.gnu.org/licenses/gpl-3.0.en.html). This ensures that any contributions
-                                to Pyregence's tools will remain in the open source domain indefinitely and may be reused and improved upon by
-                                the next generation of modelers, programmers, and fire scientists.
+                                The Pyregence Consortium is committed to transparency and reproducibility throughout our systems because we recognize these as necessary ingredients for successful science-based decision making. No one trusts a black box, and that is why all of our software from our weather pipeline and high performance fire models to our dynamic web interface is being developed and released under the strongest open source license currently available: the <a href="https://www.gnu.org/licenses/gpl-3.0.en.html" target="_blank">GPLv3</a>. This ensures that any contributions to Pyregence's tools will remain in the open source domain indefinitely and may be reused and improved upon by the next generation of modelers, programmers, and fire scientists.
                             </p>
                             <div class="d-flex justify-content-center py-3"><a href="#" class="btn border-yellow text-white text-center">Github</a></div>
                         </div>
@@ -404,13 +372,7 @@
                                 Project funded by</h3>
                             <div class="yellow-line small my-3"></div>
                             <p class="text-justify">
-                                This document was prepared as a result of work sponsored by the California Energy Commission. It does not
-                                necessarily represent the views of the Energy Commission, its employees, or the State of California. Neither
-                                the Commission, the State of California, nor the Commission's employees, contractors, or subcontractors makes
-                                any warranty, express or implied, or assumes any legal liability for the information in this document; nor does
-                                any party represent that the use of this information will not infringe upon privately owned rights. This document
-                                has not been approved or disapproved by the Commission, nor has the Commission passed upon the accuracy of the
-                                information in this document.
+                                This document was prepared as a result of work sponsored by the California Energy Commission. It does not necessarily represent the views of the Energy Commission, its employees, or the State of California. Neither the Commission, the State of California, nor the Commission's employees, contractors, or subcontractors makes any warranty, express or implied, or assumes any legal liability for the information in this document; nor does any party represent that the use of this information will not infringe upon privately owned rights. This document has not been approved or disapproved by the Commission, nor has the Commission passed upon the accuracy of the information in this document.
                             </p>
                         </div>
                         <div class="col-md-6 px-4">
@@ -418,16 +380,12 @@
                             <div class="yellow-line small my-3"></div>
                             <div class="row">
                                 <div class="col-md-6">
-                                    <p><span class="smaller">Contact Name</span><br>
-                                        (925)555-5555</p>
-                                    <p><span class="smaller">Contact Name</span><br>
-                                        (925)555-5555</p>
-                                    <p><span class="smaller">Contact Name</span><br>
-                                        email@pyregence.org</p>
+                                    <p>Shane Romsos<br />
+									<a href="mailto:pyregence@sig-gis.com">pyregence@sig-gis.com</a></p>
                                 </div>
                                 <div class="col-md-6">
                                     <p><span class="smaller">Address</span><br>
-                                        5555 Pyregence Ave.<br>
+                                        2529 Yolanda Ct.<br>
                                         Pleasanton, CA. 94566
                                     </p>
                                 </div>
