--- a/resources/html/home.html
+++ b/resources/html/home.html
@@ -352,7 +352,9 @@
                             <p class="text-white text-justify">
                                 The Pyregence Consortium is committed to transparency and reproducibility throughout our systems because we recognize these as necessary ingredients for successful science-based decision making. No one trusts a black box, and that is why all of our software from our weather pipeline and high performance fire models to our dynamic web interface is being developed and released under the strongest open source license currently available: the <a href="https://www.gnu.org/licenses/gpl-3.0.en.html" target="_blank">GPLv3</a>. This ensures that any contributions to Pyregence's tools will remain in the open source domain indefinitely and may be reused and improved upon by the next generation of modelers, programmers, and fire scientists.
                             </p>
-                            <div class="d-flex justify-content-center py-3"><a href="#" class="btn border-yellow text-white text-center">Github</a></div>
+                            <div class="d-flex justify-content-center py-3">
+                                <a href="https://github.com/pyregence" class="btn border-yellow text-white text-center">Github</a>
+                            </div>
                         </div>
                     </div>
                 </div>
