--- a/resources/html/home.html
+++ b/resources/html/home.html
@@ -14,9 +14,9 @@
             <div class="wrapper-navbar">
                 <a class="skip-link sr-only sr-only-focusable" href="#content">Skip to content</a>
                 <div class="container">
-                    <div class="row py-3">
-                        <div class="col-md-3 col-6 d-flex align-items-center">
-                            <a class="navbar-brand" rel="home" href="/" title="Pyregence"><img src="images/pyregence.svg" alt="Pyregence logo" class="real-logo" /><img src="images/pyregence-yellow.svg" class="yellow-logo" alt="Pyregence logo yellow" /></a>
+                    <div class="row align-items-center py-2 py-md-3">
+                        <div class="col-md-3 col-6">
+                            <a class="navbar-brand" rel="home" href="/" title="Pyregence"><img src="images/pyregence-logo.svg" alt="Pyregence logo" class="real-logo" /><img src="images/pyregence-logo-white.svg" class="yellow-logo" alt="Pyregence logo yellow" /></a>
                         </div>
                         <div class="col-md-9 col-6 mobile-flex">
                             <div class="mobile-button">
