rename class and alt text

--- a/resources/html/home.html
+++ b/resources/html/home.html
@@ -16,7 +16,7 @@
                 <div class="container">
                     <div class="row align-items-center py-2 py-md-3">
                         <div class="col-md-3 col-6">
-                            <a class="navbar-brand" rel="home" href="/" title="Pyregence"><img src="images/pyregence-logo.svg" alt="Pyregence logo" class="real-logo" /><img src="images/pyregence-logo-white.svg" class="yellow-logo" alt="Pyregence logo yellow" /></a>
+                            <a class="navbar-brand" rel="home" href="/" title="Pyregence"><img src="images/pyregence-logo.svg" alt="Pyregence logo" class="real-logo" /><img src="images/pyregence-logo-white.svg" class="white-logo" alt="Pyregence logo white" /></a>
                         </div>
                         <div class="col-md-9 col-6 mobile-flex">
                             <div class="mobile-button">
