--- a/resources/html/not-found.html
+++ b/resources/html/not-found.html
@@ -4,21 +4,20 @@
         <meta name="robots" content="noindex, nofollow">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <link rel="stylesheet"
-              href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-              integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <link rel="stylesheet" href="css/style.css">
         <title>Pyregence - Wildfire Risk Models for a Safe & Resilient Grid</title>
         <meta name="description" content="The next generation of open source wildfire risk models to support decision making for a more safe and resilient electric grid.">
+        <link rel="icon" type="image/png" href="../images/favicon.png">
     </head>
-    <body class="home">
+    <body>
         <div class="site">
-            <div class="wrapper-navbar">
+            <div class="wrapper-navbar" id="header">
                 <a class="skip-link sr-only sr-only-focusable" href="#content">Skip to content</a>
                 <div class="container">
-                    <div class="row py-3">
-                        <div class="col-md-3 col-6 d-flex align-items-center">
-                            <a class="navbar-brand" rel="home" href="/" title="Pyregence"><img src="images/pyregence.svg" alt="Pyregence logo" class="real-logo" /><img src="images/pyregence-yellow.svg" class="yellow-logo" alt="Pyregence logo yellow" /></a>
+                    <div class="row align-items-center" id="nav-row">
+                        <div class="col-md-3 col-6">
+                            <a class="navbar-brand" rel="home" href="/" title="Pyregence"><img src="images/pyregence-logo.svg" alt="Pyregence logo" class="real-logo" /><img src="images/pyregence-logo-white.svg" class="white-logo" alt="Pyregence logo white" /></a>
                         </div>
                         <div class="col-md-9 col-6 mobile-flex">
                             <div class="mobile-button">
@@ -50,9 +49,15 @@
                     </div>
                 </div>
             </div>
-            <div class="container my-5 text-center">
-                <h1>404 - Page Not Found</h1>
-            </div>
+            <div class="content">
+                <div class="container my-5 text-center">
+                    <div class="row py-5">
+                        <div class="col-md-12">
+                            <h1 style="text-align: center;">404 - Page Not Found</h1>
+                        </div>
+                    </div>    
+                </div>
+            </div>    
             <footer class="jumbotron bg-brown mb-0 py-3">
                 <p class="text-white text-center mb-0 smaller">&copy; 2020 Pyregence - All Rights Reserved | Terms</p>
             </footer>
