Updates to home.html and style.css

--- a/resources/html/home.html
+++ b/resources/html/home.html
@@ -76,7 +76,7 @@
                     <div class="slider-button p-absolute">
                     </div>
                 </div>
-                <div class="jumbotron bg-white pt-4 pb-0 mt-3 panel2">
+                <div class="jumbotron bg-white pt-4 pb-0 mt-3">
                     <div class="container">
                         <div class="row study-build">
                             <div class="col-md-6 mb-4">
