updates per Gary.

--- a/resources/html/home.html
+++ b/resources/html/home.html
@@ -9,6 +9,11 @@
         <title>Pyregence - Wildfire Risk Models for a Safe & Resilient Grid</title>
         <meta name="description" content="The next generation of open source wildfire risk models to support decision making for a more safe and resilient electric grid.">
         <link rel="icon" type="image/png" href="../images/favicon.png">
+        <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+        <script src="js/matchHeight.js"></script>
+        <script src="js/script.js"></script>
     </head>
     <body class="home">
         <div class="site">
@@ -20,8 +25,8 @@
                     <div class="row align-items-center" id="nav-row">
                         <div class="col-md-3 col-6">
                             <a class="navbar-brand" rel="home" href="/" title="Pyregence">
-                                <img src="images/pyregence-logo.svg" alt="Pyregence logo" class="real-logo" />
-                                <img src="images/pyregence-logo-white.svg" class="white-logo" alt="Pyregence logo white" />
+                                <img src="images/pyregence-logo.svg" alt="Pyregence logo" class="real-logo">
+                                <img src="images/pyregence-logo-white.svg" class="white-logo" alt="Pyregence logo white">
                             </a>
                         </div>
                         <div class="col-md-9 col-6 mobile-flex">
@@ -86,7 +91,7 @@
                                         <div class="box-shadow">
                                             <div class="box extreme-weather">
                                                 <div class="white circle d-flex align-items-center justify-content-center4">
-                                                    <img src="images/extreme-weather.svg" alt="Extreme Weather icon" />
+                                                    <img src="images/extreme-weather.svg" alt="Extreme Weather icon">
                                                 </div>
                                             </div>
                                             <div class="box-content clearfix">
@@ -105,7 +110,7 @@
                                         <div class="box-shadow">
                                             <div class="box wildfire-science">
                                                 <div class="white circle d-flex align-items-center justify-content-center">
-                                                    <img src="images/advanced-wildfire-science.svg" alt="Advanced Wildfire Science icon" />
+                                                    <img src="images/advanced-wildfire-science.svg" alt="Advanced Wildfire Science icon">
                                                 </div>
                                             </div>
                                             <div class="box-content clearfix">
@@ -129,7 +134,7 @@
                                         <div class="box-shadow">
                                             <div class="box forecasts">
                                                 <div class="white circle d-flex align-items-center justify-content-center">
-                                                    <img src="images/wildfire-map-icon.svg" alt="Wildfire Forecasts icon" />
+                                                    <img src="images/wildfire-map-icon.svg" alt="Wildfire Forecasts icon">
                                                 </div>
                                             </div>
                                             <div class="box-content clearfix">
@@ -148,7 +153,7 @@
                                         <div class="box-shadow">
                                             <div class="box scenarios">
                                                 <div class="white circle d-flex align-items-center justify-content-center">
-                                                    <img src="images/wildfire-chart-icon.svg" alt="Wildfire Scenarios icon" />
+                                                    <img src="images/wildfire-chart-icon.svg" alt="Wildfire Scenarios icon">
                                                 </div>
                                             </div>
                                             <div class="box-content clearfix">
@@ -197,7 +202,7 @@
                         <div class="row align-items-center">
                             <div class="col-md-2">
                                 <div class="white circle large">
-                                    <img src="images/extreme-weather.svg" alt="Extreme Weather icon" />
+                                    <img src="images/extreme-weather.svg" alt="Extreme Weather icon">
                                 </div>
                             </div>
                             <div class="col-md-7">
@@ -218,7 +223,7 @@
                         <div class="row align-items-center">
                             <div class="col-md-2">
                                 <div class="white circle large">
-                                    <img src="images/advanced-wildfire-science.svg" alt="Advanced Wildfire Science icon" />
+                                    <img src="images/advanced-wildfire-science.svg" alt="Advanced Wildfire Science icon">
                                 </div>
                             </div>
                             <div class="col-md-7">
@@ -239,7 +244,7 @@
                         <div class="row align-items-center">
                             <div class="col-md-2">
                                 <div class="white circle large">
-                                    <img src="images/wildfire-map-icon.svg" alt="Wildfire Forecasts icon" />
+                                    <img src="images/wildfire-map-icon.svg" alt="Wildfire Forecasts icon">
                                 </div>
                             </div>
                             <div class="col-md-7">
@@ -248,7 +253,7 @@
                                 <p class="text-white">
                                     Electric utilities face numerous barriers to access operational information to mitigate wildfire risk. Current wildfire science and technology is fragmented and software is either unable to function at scale or hidden in a black box behind a paywall. The Pyregence Consortium provides electric utilities with free and open source access to software tools for forecasting wildfire activity in California to inform the operation of a safe and reliable electric grid
                                 </p>
-                                </div>
+                            </div>
                             <div class="col-md-3 text-center">
                                 <a class="btn text-white" href="#">Learn More</a>
                             </div>
@@ -260,7 +265,7 @@
                         <div class="row align-items-center">
                             <div class="col-md-2">
                                 <div class="white circle large">
-                                    <img src="images/wildfire-chart-icon.svg" alt="Wildfire Scenarios icon" />
+                                    <img src="images/wildfire-chart-icon.svg" alt="Wildfire Scenarios icon">
                                 </div>
                             </div>
                             <div class="col-md-7">
@@ -283,7 +288,7 @@
                                 Pyregence Consortium
                             </h2>
                             <p class="subtitle text-center">
-                            The ‘open source’ collaboration brings together initiatives and researchers from 18 institutions representing industry, academia, and government to support how wildfire risk mitigation and adaptation is implemented across California.
+                                The ‘open source’ collaboration brings together initiatives and researchers from 18 institutions representing industry, academia, and government to support how wildfire risk mitigation and adaptation is implemented across California.
                             </p>
                         </div>
                     </div>
@@ -295,92 +300,92 @@
                     <div class="row justify-content-center logos">
                         <div class="col-lg-2 col-md-4 col-6 d-flex justify-content-center align-items-center">
                             <div class="circle white">
-                                <img src="images/sig-logo-stacked.png" alt="SIG logo" />
+                                <img src="images/sig-logo-stacked.png" alt="SIG logo">
                             </div>
                         </div>
                         <div class="col-lg-2 col-md-4 col-6 d-flex justify-content-center align-items-center">
                             <div class="circle white">
-                                <img src="images/UCAR.jpg" alt="UCAR logo" />
+                                <img src="images/UCAR.jpg" alt="UCAR logo">
                             </div>
                         </div>
                         <div class="col-lg-2 col-md-4 col-6 d-flex justify-content-center align-items-center">
                             <div class="circle white">
-                                <img src="images/berkeley.png" alt="berkeley logo" />
+                                <img src="images/berkeley.png" alt="berkeley logo">
                             </div>
                         </div>
                         <div class="col-lg-2 col-md-4 col-6 d-flex justify-content-center align-items-center">
                             <div class="circle white">
-                                <img src="images/USGS-01.png" alt="USGS logo" />
+                                <img src="images/USGS-01.png" alt="USGS logo">
                             </div>
                         </div>
                         <div class="col-lg-2 col-md-4 col-6 d-flex justify-content-center align-items-center">
                             <div class="circle white">
-                                <img src="images/reax-enginering.jpg" alt="reax engineeering logo" />
+                                <img src="images/reax-enginering.jpg" alt="reax engineeering logo">
                             </div>
                         </div>
                         <div class="col-lg-2 col-md-4 col-6 d-flex justify-content-center align-items-center">
                             <div class="circle white">
-                                <img src="images/university-of-california-merced.png" alt="university-of-california-merced logo" />
+                                <img src="images/university-of-california-merced.png" alt="university-of-california-merced logo">
                             </div>
                         </div>
                         <div class="col-lg-2 col-md-4 col-6 d-flex justify-content-center align-items-center">
                             <div class="circle white">
-                                <img src="images/scripps-logo.png" alt="scripps logo" />
+                                <img src="images/scripps-logo.png" alt="scripps logo">
                             </div>
                         </div>
                         <div class="col-lg-2 col-md-4 col-6 d-flex justify-content-center align-items-center">
                             <div class="circle white">
-                                <img src="images/prometheus.jpg" alt="prometheus logo" />
+                                <img src="images/prometheus.jpg" alt="prometheus logo">
                             </div>
                         </div>
                         <div class="col-lg-2 col-md-4 col-6 d-flex justify-content-center align-items-center">
                             <div class="circle white">
-                                <img src="images/UNM.png" alt="UNM logo" />
+                                <img src="images/UNM.png" alt="UNM logo">
                             </div>
                         </div>
                         <div class="col-lg-2 col-md-4 col-6 d-flex justify-content-center align-items-center">
                             <div class="circle white">
-                                <img src="images/university-of-san-francisco.png" alt="university-of-san-francisco logo" />
+                                <img src="images/university-of-san-francisco.png" alt="university-of-san-francisco logo">
                             </div>
                         </div>
                         <div class="col-lg-2 col-md-4 col-6 d-flex justify-content-center align-items-center">
                             <div class="circle white">
-                                <img src="images/university-of-california-santa-barbara.png" alt="universit-of-california-santa-barbara logo" />
+                                <img src="images/university-of-california-santa-barbara.png" alt="universit-of-california-santa-barbara logo">
                             </div>
                         </div>
                         <div class="col-lg-2 col-md-4 col-6 d-flex justify-content-center align-items-center">
                             <div class="circle white">
-                                <img src="images/usfs-logo.png" alt="usfs logo" />
+                                <img src="images/usfs-logo.png" alt="usfs logo">
                             </div>
                         </div>
                         <div class="col-lg-2 col-md-4 col-6 d-flex justify-content-center align-items-center">
                             <div class="circle white">
-                                <img src="images/pyrologix.png" alt="pyrologix logo" />
+                                <img src="images/pyrologix.png" alt="pyrologix logo">
                             </div>
                         </div>
                         <div class="col-lg-2 col-md-4 col-6 d-flex justify-content-center align-items-center">
                             <div class="circle white">
-                                <img src="images/eagle.jpg" alt="eagle logo" />
+                                <img src="images/eagle.jpg" alt="eagle logo">
                             </div>
                         </div>
                         <div class="col-lg-2 col-md-4 col-6 d-flex justify-content-center align-items-center">
                             <div class="circle white">
-                                <img src="images/deer-creek-gis.png" alt="deer-creek-gis" />
+                                <img src="images/deer-creek-gis.png" alt="deer-creek-gis">
                             </div>
                         </div>
                         <div class="col-lg-2 col-md-4 col-6 d-flex justify-content-center align-items-center">
                             <div class="circle white">
-                                <img src="images/STI-logo.jpg" alt="STI logo" />
+                                <img src="images/STI-logo.jpg" alt="STI logo">
                             </div>
                         </div>
                         <div class="col-lg-2 col-md-4 col-6 d-flex justify-content-center align-items-center">
                             <div class="circle white">
-                                <img src="images/Salo-logo.jpg" alt="Salo Logo" />
+                                <img src="images/Salo-logo.jpg" alt="Salo Logo">
                             </div>
                         </div>
                         <div class="col-lg-2 col-md-4 col-6 d-flex justify-content-center align-items-center">
                             <div class="circle white">
-                                <img src="images/lumen-logo.jpg" alt="lumen energy strategy Logo" />
+                                <img src="images/lumen-logo.jpg" alt="lumen energy strategy Logo">
                             </div>
                         </div>
                     </div>
@@ -390,7 +395,7 @@
                         <div class="row justify-content-center">
                             <div class="col-md-8">
                                 <div class="d-block text-center gpl mb-4">
-                                    <img src="images/gpl-logo.svg" alt="GPL Free Software" />
+                                    <img src="images/gpl-logo.svg" alt="GPL Free Software">
                                 </div>
                                 <h3 class="text-white text-center mb-0">Everything open source because it’s good</h3>
                             </div>
@@ -407,7 +412,7 @@
                                 </p>
                                 <div class="d-flex justify-content-center py-3">
                                     <a href="https://github.com/pyregence" class="btn border-yellow text-white text-center">Github</a>
-                                 </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -429,8 +434,9 @@
                                 <div class="row">
                                     <div class="col-md-12">
                                         <p><span class="smaller">Project Manager</span><br>
-                                            Shane Romsos<br />
-                                        <a href="mailto:pyregence@sig-gis.com">pyregence@sig-gis.com</a></p>
+                                            Shane Romsos<br>
+                                            <a href="mailto:pyregence@sig-gis.com">pyregence@sig-gis.com</a>
+                                        </p>
                                     </div>
                                 </div>
                             </div>
@@ -442,10 +448,5 @@
                 <p class="text-white text-center mb-0 smaller">&copy; 2020 Pyregence - All Rights Reserved | Terms</p>
             </footer>
         </div>
-        <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-        <script src="js/matchHeight.js"></script>
-        <script src="js/script.js"></script>
     </body>
 </html>
