--- a/resources/html/not-found.html
+++ b/resources/html/not-found.html
@@ -9,6 +9,10 @@
         <title>Pyregence - Wildfire Risk Models for a Safe & Resilient Grid</title>
         <meta name="description" content="The next generation of open source wildfire risk models to support decision making for a more safe and resilient electric grid.">
         <link rel="icon" type="image/png" href="../images/favicon.png">
+        <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+        <script src="js/script.js"></script>
     </head>
     <body>
         <div class="site">
@@ -18,8 +22,8 @@
                     <div class="row align-items-center" id="nav-row">
                         <div class="col-md-3 col-6">
                             <a class="navbar-brand" rel="home" href="/" title="Pyregence">
-                                <img src="images/pyregence-logo.svg" alt="Pyregence logo" class="real-logo" />
-                                <img src="images/pyregence-logo-white.svg" class="white-logo" alt="Pyregence logo white" />
+                                <img src="images/pyregence-logo.svg" alt="Pyregence logo" class="real-logo">
+                                <img src="images/pyregence-logo-white.svg" class="white-logo" alt="Pyregence logo white">
                             </a>
                         </div>
                         <div class="col-md-9 col-6 mobile-flex">
@@ -65,9 +69,5 @@
                 <p class="text-white text-center mb-0 smaller">&copy; 2020 Pyregence - All Rights Reserved | Terms</p>
             </footer>
         </div>
-        <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-        <script src="js/script.js"></script>
     </body>
 </html>
