Remove need for matchHeight.js

--- a/resources/html/home.html
+++ b/resources/html/home.html
@@ -12,7 +12,6 @@
         <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-        <script src="js/matchHeight.js"></script>
         <script src="js/script.js"></script>
     </head>
     <body class="home">
@@ -84,10 +83,10 @@
                 <div class="jumbotron bg-white pt-4 pb-0 mt-3">
                     <div class="container">
                         <div class="row study-build">
-                            <div class="col-md-6 mb-4">
+                            <div class="d-flex flex-column col-md-6 mb-4">
                                 <h2 class="text-center text-yellow mb-4">Study it</h2>
-                                <div class="row">
-                                    <div class="col-md-6 px-2 mb-4 equal-heights">
+                                <div class="row flex-fill">
+                                    <div class="col-md-6 px-2 mb-4 d-flex">
                                         <div class="box-shadow">
                                             <div class="box extreme-weather">
                                                 <div class="white circle d-flex align-items-center justify-content-center4">
@@ -106,7 +105,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="col-md-6 px-2 mb-4 equal-heights">
+                                    <div class="col-md-6 px-2 mb-4 d-flex">
                                         <div class="box-shadow">
                                             <div class="box wildfire-science">
                                                 <div class="white circle d-flex align-items-center justify-content-center">
@@ -127,10 +126,10 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-6 mb-4">
+                            <div class="d-flex flex-column col-md-6 mb-4">
                                 <h2 class="text-center text-yellow mb-4">Build it</h2>
-                                <div class="row">
-                                    <div class="col-md-6 px-2 mb-4 equal-heights">
+                                <div class="row flex-fill">
+                                    <div class="col-md-6 px-2 mb-4 d-flex">
                                         <div class="box-shadow">
                                             <div class="box forecasts">
                                                 <div class="white circle d-flex align-items-center justify-content-center">
@@ -149,7 +148,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="col-md-6 px-2 mb-4 equal-heights">
+                                    <div class="col-md-6 px-2 mb-4 d-flex">
                                         <div class="box-shadow">
                                             <div class="box scenarios">
                                                 <div class="white circle d-flex align-items-center justify-content-center">
