svg filename/alt tag and css spacing

--- a/resources/html/home.html
+++ b/resources/html/home.html
@@ -109,7 +109,7 @@
                                         <div class="box-shadow">
                                             <div class="box wildfire-science">
                                                 <div class="white circle d-flex align-items-center justify-content-center">
-                                                    <img src="images/icons/fire-behavior.svg" alt="Advanced Wildfire Science icon">
+                                                    <img src="images/icons/fire-behavior.svg" alt="Fire Behavior icon">
                                                 </div>
                                             </div>
                                             <div class="box-content clearfix">
@@ -133,7 +133,7 @@
                                         <div class="box-shadow">
                                             <div class="box forecasts">
                                                 <div class="white circle d-flex align-items-center justify-content-center">
-                                                    <img src="images/icons/forecast-tools.svg" alt="Wildfire Forecasts icon">
+                                                    <img src="images/icons/forecast-tools.svg" alt="Forecast Tools icon">
                                                 </div>
                                             </div>
                                             <div class="box-content clearfix">
@@ -152,7 +152,7 @@
                                         <div class="box-shadow">
                                             <div class="box scenarios">
                                                 <div class="white circle d-flex align-items-center justify-content-center">
-                                                    <img src="images/icons/wildfire-chart-icon.svg" alt="Wildfire Scenarios icon">
+                                                    <img src="images/icons/wildfire-analyses.svg" alt="Scenario Analyses icon">
                                                 </div>
                                             </div>
                                             <div class="box-content clearfix">
@@ -222,7 +222,7 @@
                         <div class="row align-items-center">
                             <div class="col-md-2">
                                 <div class="white circle large">
-                                    <img src="images/icons/fire-behavior.svg" alt="Advanced Wildfire Science icon">
+                                    <img src="images/icons/fire-behavior.svg" alt="Fire Behavior icon">
                                 </div>
                             </div>
                             <div class="col-md-7">
@@ -243,7 +243,7 @@
                         <div class="row align-items-center">
                             <div class="col-md-2">
                                 <div class="white circle large">
-                                    <img src="images/icons/forecast-tools.svg" alt="Wildfire Forecasts icon">
+                                    <img src="images/icons/forecast-tools.svg" alt="Forecast Tools icon">
                                 </div>
                             </div>
                             <div class="col-md-7">
@@ -264,7 +264,7 @@
                         <div class="row align-items-center">
                             <div class="col-md-2">
                                 <div class="white circle large">
-                                    <img src="images/icons/wildfire-chart-icon.svg" alt="Wildfire Scenarios icon">
+                                    <img src="images/icons/wildfire-analyses.svg" alt="Scenario Analyses icon">
                                 </div>
                             </div>
                             <div class="col-md-7">
